# tauri-plugin-sidecar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/sidecar-core/: Cargo.toml
crates/sidecar-core/examples/: two_sidecars.rs
crates/sidecar-core/src/: lib.rs
crates/sidecar-core/src/domain/: config.rs  error.rs  mod.rs  ordering.rs  state.rs
crates/sidecar-core/src/infra/: health.rs  mod.rs  pid_store.rs
crates/sidecar-core/src/platform/: mod.rs  ports.rs  process.rs
crates/sidecar-core/src/runtime/: manager.rs  mod.rs  supervisor.rs
crates/sidecar-core/tests/: integration.rs  integration_windows.rs
crates/tauri-plugin-sidecar/: Cargo.toml  build.rs
crates/tauri-plugin-sidecar/permissions/: default.toml
crates/tauri-plugin-sidecar/permissions/autogenerated/: reference.md
crates/tauri-plugin-sidecar/permissions/autogenerated/commands/: logs.toml
crates/tauri-plugin-sidecar/permissions/schemas/: schema.json
crates/tauri-plugin-sidecar/src/: commands.rs  lib.rs
examples/demo-app/: README.md
examples/demo-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/demo-app/src-tauri/capabilities/: default.json
examples/demo-app/src-tauri/src/: main.rs
examples/demo-app/ui/: index.html
guest-js/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
