[package]
name = "sidecar-core"
description = "Sidecar process supervision: crash restarts with backoff, dynamic ports, auth tokens, health checks, kill-tree shutdown, and orphan cleanup. Tauri-agnostic core of tauri-plugin-sidecar."
keywords = ["sidecar", "process", "supervisor", "subprocess"]
categories = ["os", "asynchronous"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["rt", "process", "time", "sync", "net", "io-util", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
rand = "0.9"
regex = "1"
parking_lot = "0.12"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
win32job = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
